feat: implement custom log and refine what shopper receive as response
diff --git a/adyen-appexchange/force-app/main/default/classes/AdyenAuthWebhookHandler.cls b/adyen-appexchange/force-app/main/default/classes/AdyenAuthWebhookHandler.cls
index d9bef4d..b504a04 100644
--- a/adyen-appexchange/force-app/main/default/classes/AdyenAuthWebhookHandler.cls
+++ b/adyen-appexchange/force-app/main/default/classes/AdyenAuthWebhookHandler.cls
@@ -21,6 +21,10 @@ global without sharing class AdyenAuthWebhookHandler {
             } else {
                 return handleMissingPaymentAuthorization(notificationRequestItem, req.requestBody.toString());
             }
+        } catch (Exception ex) {
+            System.debug(LoggingLevel.ERROR, ex.getMessage());
+            LogEntry.insertLogException(ex, 'Adyen Auth Web Hook Handler Error', AdyenAuthWebhookHandler.class.getName(), 'doPost', req.requestBody?.toString());
+            return '[accepted] but an exception happened';
         }
         catch (Exception ex) {
             if (ex instanceOf HMACValidator.HMACValidationException){
@@ -129,10 +133,6 @@ global without sharing class AdyenAuthWebhookHandler {
             return '[accepted]';
         }
         String messageWithBut = '[accepted] but ' + message;
-        if (messageWithBut.length() > 255) {
-            return messageWithBut.substring(0, 255);
-        } else {
-            return messageWithBut;
-        }
+        return AdyenB2BUtils.safeAssignTextFieldValue(messageWithBut, PaymentGatewayLog.GatewayMessage.getDescribe());
     }
 }
\ No newline at end of file
diff --git a/adyen-appexchange/force-app/main/default/classes/AdyenAuthWebhookHandlerTest.cls b/adyen-appexchange/force-app/main/default/classes/AdyenAuthWebhookHandlerTest.cls
index 9f5ffc3..7d68c38 100644
--- a/adyen-appexchange/force-app/main/default/classes/AdyenAuthWebhookHandlerTest.cls
+++ b/adyen-appexchange/force-app/main/default/classes/AdyenAuthWebhookHandlerTest.cls
@@ -132,6 +132,7 @@

--- a/adyen-appexchange/force-app/main/default/classes/AdyenAuthWebhookHandler.cls
+++ b/adyen-appexchange/force-app/main/default/classes/AdyenAuthWebhookHandler.cls
@@ -21,6 +21,10 @@ global without sharing class AdyenAuthWebhookHandler {
             } else {
                 return handleMissingPaymentAuthorization(notificationRequestItem, req.requestBody.toString());
             }
+        } catch (Exception ex) {
+            System.debug(LoggingLevel.ERROR, ex.getMessage());
+            LogEntry.insertLogException(ex, 'Adyen Auth Web Hook Handler Error', AdyenAuthWebhookHandler.class.getName(), 'doPost', req.requestBody?.toString());
+            return '[accepted] but an exception happened';
         }
         catch (Exception ex) {
             if (ex instanceOf HMACValidator.HMACValidationException){
@@ -129,10 +133,6 @@ global without sharing class AdyenAuthWebhookHandler {
             return '[accepted]';
         }
         String messageWithBut = '[accepted] but ' + message;
-        if (messageWithBut.length() > 255) {
-            return messageWithBut.substring(0, 255);
-        } else {
-            return messageWithBut;
-        }
+        return AdyenB2BUtils.safeAssignTextFieldValue(messageWithBut, PaymentGatewayLog.GatewayMessage.getDescribe());
     }
 }
