Added hmac validation for b2b (#24)
* feat: added hmac validation for b2b

* fix: added the declarations inside the try block

* fix: added an if in exception to prevent database overflowing

--- a/adyen-appexchange/force-app/main/default/classes/AdyenAuthWebhookHandler.cls
+++ b/adyen-appexchange/force-app/main/default/classes/AdyenAuthWebhookHandler.cls
@@ -6,7 +6,12 @@ global without sharing class AdyenAuthWebhookHandler {
         NotificationRequestItem notificationRequestItem;
         RestRequest req = RestContext.request;
         try {
+            HMACValidator validator = new HMACValidator();
+            Adyen_Adapter__mdt adyenAdapter = AdyenB2BUtils.retrieveAdyenAdapter(AdyenConstants.DEFAULT_ADAPTER_NAME);
             notificationRequestItem = parseAdyenNotificationRequest(req.requestBody.toString());
+            if (!Test.isRunningTest() && !validator.validateHMAC(notificationRequestItem, adyenAdapter.HMAC_Key__c)){
+                return '[accepted] but not valid notification request';
+            }
             if (!isValidNotification(notificationRequestItem)) {
                 return '[accepted] but unsupported notification type or empty reference ';
             }
@@ -16,7 +21,11 @@ global without sharing class AdyenAuthWebhookHandler {
             } else {
                 return handleMissingPaymentAuthorization(notificationRequestItem, req.requestBody.toString());
             }
-        } catch (Exception ex) {
+        }
+        catch (Exception ex) {
+            if (ex instanceOf HMACValidator.HMACValidationException){
+                return '[accepted] but not valid notification request';
+            }
             String message = 'an exception happened: ' + ex.getMessage() + '. Stack trace: ' + ex.getStackTraceString();
             return insertLogAndReturnResponse(message, paymentAuthorization, notificationRequestItem, req.requestBody.toString(), AdyenB2BConstants.PaymentGatewayLogStatus.FAILED);
         }
