Removing unused features (#28)
* feat: removing unused classes and refactoring methods

* fix: declaration (lint)

* fix: removing not used adyen async handler

---------

Co-authored-by: daniloc <danilo.cardoso@adyen.com>

--- a/adyen-appexchange/force-app/main/default/classes/AdyenAsyncAdapter.cls
+++ b/adyen-appexchange/force-app/main/default/classes/AdyenAsyncAdapter.cls
@@ -2,16 +2,12 @@
  *  This adapter is called by the Payment Gateway.
  *  The http calls are delegated to the AdyenPaymentHelper Class.
  *
- *  This will process a CAPTURE and a REFUND Request as well as the corresponding Async callbacks.
+ *  This will process a POST-AUTHORIZE Request.
  *
  *  @see AdyenPaymentHelper
- *  @see AdyenService
- *  @see https://quip.com/z6RVAJzUKYaf
  */
-global with sharing class AdyenAsyncAdapter implements CommercePayments.PaymentGatewayAdapter,
-                                            CommercePayments.PaymentGatewayAsyncAdapter {
+global with sharing class AdyenAsyncAdapter implements CommercePayments.PaymentGatewayAdapter {
 
-    
     global AdyenAsyncAdapter() {}
   
    /**
@@ -20,27 +16,9 @@ global with sharing class AdyenAsyncAdapter implements CommercePayments.PaymentG
     *
     * @param   paymentGatewayContext from Salesforce
     * @return  CommercePayments.GatewayResponse
-    *
-    * @implNotes
-    * [CAPTURE] is called after setting Fulfillment.Status to 'Fulfilled' which in turns fires processes
-    * and flows to create invoices which ultimately fires this.
-    *
-    * [REFUND] is called by using the action on the order summary page (left hand side).
-    *
     */
     global CommercePayments.GatewayResponse processRequest(CommercePayments.PaymentGatewayContext paymentGatewayContext) {
         return AdyenPaymentHelper.handleFulfillmentOrderStatusChange(paymentGatewayContext);
-    }
-
-   /**
-    *  Listens to the incoming async notification callback from Adyen and handover to AdyenPaymentHelper for processing
-    *  
-    * @param gatewayNotificationContext from Salesforce
-    * @return CommercePayments.GatewayNotificationResponse
-    */
-    public CommercePayments.GatewayNotificationResponse processNotification(CommercePayments.PaymentGatewayNotificationContext gatewayNotificationContext) {
-        String apexName = String.valueOf(this).substring(0, String.valueOf(this).indexOf(':'));
-        return AdyenWebhookNotificationHelper.handleAsyncNotificationCallback(gatewayNotificationContext, apexName);
     }
 
     public class GatewayException extends Exception {}
